--- a/assessment.html
+++ b/assessment.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JS Assessment</title>
+    <title>JS Assessment V2</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.4/jasmine.css" />
     <style type="text/css">
         h1 {
@@ -11,9 +11,6 @@
     </style>
 </head>
 <body>
-
-//comment
-
 <h1>JS Basics Assessment</h1>
 <p>See README.md for exercise directions</p>
 
@@ -26,6 +23,6 @@
 <script src="./tests.js" type="text/javascript"></script>
 
 <!-- custom js (your solutions to the assessment questions) -->
-<script src="./instructor-solutions.js" type="text/javascript" ></script>
+<script src="./solutions.js" type="text/javascript" ></script>
 </body>
 </html>
